--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "gatsby": "^2.32.3",
     "gatsby-background-image": "^1.5.0",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^3.9.0",
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-sharp": "^2.12.0",
@@ -39,6 +41,7 @@
     "react-google-maps": "^9.4.5",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "smooth-scroll": "^16.1.3",
     "styled-components": "^5.2.1",
     "typeface-cormorant-upright": "^1.1.13"
   },
@@ -46,6 +49,4 @@
     "@iconify/icons-entypo": "^1.1.0",
     "gh-pages": "^3.1.0"
   }
-  
 }
-
