--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^3.9.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-datocms": "^2.6.15",
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-sharp": "^2.12.0",
     "google-maps-react": "^2.0.6",
@@ -40,6 +41,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-google-maps": "^9.4.5",
+    "react-markdown": "^6.0.2",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
